--- a/res/css/views/elements/_ServerPicker.scss
+++ b/res/css/views/elements/_ServerPicker.scss
@@ -59,7 +59,7 @@ limitations under the License.
     }
 
     .mx_ServerPicker_server {
-        color: $primary-fg-color;
+        color: #2e2f32;
         grid-column: 1;
         grid-row: 2;
         margin-bottom: 16px;
